<resources>
    <string name="app_name">BitCurve</string>
    <string name="action_settings">Settings</string>
    <string name="yesterday">Yesterday</string>
    <string name="ago">ago</string>
    <string name="scan_qr_code">Scan QR-code</string>
    <string name="scan_qr_description">Place QR-code inside viewfinder to scan it</string>
    <string name="receive">Receive</string>
    <string name="account">Account</string>
    <string name="send">Send</string>
    <string name="you_have_no_transactions">You have no transactions</string>
    <string name="splash_description_text">Ultimate cryptocurrency wallet</string>
    <string name="get_fresh_receive_address">Get fresh receive address</string>
    <string name="mnemonic_warning">Save mnemonic phrase to avoid losing access to the wallet</string>
    <string name="save_mnemonic_title">Save mnemonic phrase</string>
    <string name="save_mnemonic_description">Mnemonic phrase is your secret. Who knows it - owns bitcoins. Write it down and never show anyone.</string>
    <string name="later">Later</string>
    <string name="view">Show</string>
    <string name="loading_error">Loading error</string>
    <string name="wallet_mnemonic_phrase_bip_44">Wallet mnemonic phrase (BIP44)</string>
    <string name="mnemonic_phrase_is_written_down">Mnemonic phrase is written down</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="empty_transactions_view_subtext">This account have no transactions</string>
    <string name="transition_amount">transition_amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="custom">Custom</string>
    <string name="bitcoin_address">Bitcoin address</string>
    <string name="amount">Amount</string>
    <string name="fee">Fee</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="mnemonic_phrase">Mnemonic phrase</string>
    <string name="wallet_restoring_error">Wallet restoring error</string>
    <string name="done">Done</string>
    <string name="loading">Loading…</string>

    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_auto_update_interval">key_upload_quality</string>
    <string name="general_auto_update_key">general_auto_update</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="update_mode">Update mode</string>
    <string name="general_auto_update_wifi_only_key">general_auto_update_wifi_only_key</string>
    <string name="auto_update_wifi_only">Auto update on Wi-Fi only</string>
    <string name="update_interval">Auto update interval</string>
    <string name="auto_update_interval">Auto update interval</string>
    <string name="security">Security</string>
    <string name="general">General</string>
    <string name="show_mnemonic_phrase">Show mnemonic phrase</string>
    <string name="show_mnemonic_summary">Shows mnemonic phrase of your current wallet</string>
    <string name="restore_wallet_summary">Restore another wallet from mnemonic phrase</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="use_fingerprint_summary">Use fingerprint to unblock app</string>
    <string name="change_password">Change password</string>
    <string name="key_show_mnemonic">key_show_mnemonic</string>
    <string name="key_restore_wallet">key_restore_wallet</string>
    <string name="copy">Copy</string>
    <string name="choose_email_client">Choose email client</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_auto_update_interval">Specify time interval for automatic updates</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about"> BitCurve - multicurrency multiaccount wallet</string>
    <string name="app_version">0.1</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq"></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy"></string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms"></string>
    <string name="title_version">Version</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="automatic_update">Automatic update</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="add_account">Add account</string>
    <string name="account_name">Account name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="bch_is_not_supported_yet">Bitcoin Cash is not supported yet</string>
    <string name="ltc_is_not_supported_yet">Litecoin is not supported yet</string>
    <string name="transaction">Transaction</string>
    <string name="sent">Sent</string>
    <string name="to_lowercase">to</string>
    <string name="received">Received</string>
    <string name="from_lowercase">from</string>
    <string name="time_and_date">Time and date</string>
    <string name="transaction_hash">Transaction hash</string>
    <string name="hash_copied_to_clipboard">Hash copied to clipboard</string>
    <string name="show_tx_url" translatable="false">https://blockchain.info/tx/%s</string>
    <string name="transaction_size">Transaction size</string>
    <string name="account_balance">Account balance</string>
    <string name="bytes">bytes</string>
    <string name="satoshi_lowercase">satoshi</string>
    <string name="byte_lowercase">byte</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="inputs">Inputs</string>
    <string name="outputs">Outputs</string>

</resources>
