<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_receive"
        android:enabled="true"
        android:icon="@drawable/ic_qr_black_24dp"
        android:title="@string/receive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:enabled="true"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/send"
        app:showAsAction="ifRoom" />
</menu>
