<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/address_edit_text"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_standard_dimen"
                android:inputType="textNoSuggestions"
                android:maxLines="2"
                android:text="2N8hwP1WmJrFF5QWABn38y63uYLhnJYJYTF"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                app:met_baseColor="@color/gray_54_sec_text_icons"
                app:met_underlineColor="@color/gray_54_sec_text_icons"
                app:met_primaryColor="@color/gray_54_sec_text_icons" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:id="@+id/scan_qr_image_button"
                android:layout_marginBottom="12dp"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_scan_qr"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_dimen"
            android:text="@string/amount" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_standard_dimen"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0.1"
            android:singleLine="true"
            app:met_baseColor="@color/gray_54_sec_text_icons"
            app:met_underlineColor="@color/gray_54_sec_text_icons"
            app:met_primaryColor="@color/gray_54_sec_text_icons" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_dimen"
            android:text="@string/fee" />

        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fee_segmented_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp"
            segmentedgroup:sc_checked_text_color="@color/white"
            segmentedgroup:sc_tint_color="@color/colorAccentDark">

            <RadioButton
                android:id="@+id/low_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/normal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/high_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                style="@style/RadioButton" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/fee_explanation"
            android:layout_marginTop="@dimen/standard_dimen"
            android:text="Fee size: 5 satoshi/byte. Tx confirmation time: 1 hour" />

        <com.ramotion.fluidslider.FluidSlider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:size="small"
            android:id="@+id/custom_fee_slider"
            app:bar_color="@color/colorAccentDark"/>


    </LinearLayout>

</LinearLayout>