<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/standard_dimen"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/standard_dimen"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/amount_big_text_size"
                    android:id="@+id/amount" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/amount"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/tx_description_text_size"
                    android:id="@+id/tx_description"
                    android:layout_marginTop="@dimen/standard_dimen"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tx_description"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/tx_description_text_size"
                    android:id="@+id/status"
                    android:layout_marginTop="@dimen/standard_dimen"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_26_hint_text"/>

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/standard_dimen"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_and_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/time_and_date"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/tx_hash_layout"
                android:padding="@dimen/standard_dimen"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_hash" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:id="@+id/tx_hash"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/standard_dimen"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/fee"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/standard_dimen"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/tx_size"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/standard_dimen"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_balance" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/account_balance"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:paddingStart="@dimen/standard_dimen"
                android:paddingEnd="@dimen/standard_dimen"
                android:paddingTop="@dimen/standard_dimen"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/inputs"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:paddingStart="@dimen/standard_dimen"
                android:paddingEnd="@dimen/standard_dimen"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outputs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/outputs"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/tx_info_item_text_size"
                    android:layout_marginTop="@dimen/quater_standard_dimen" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>